<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">GWW_v6.4.4</string>
    <!--<string name="app_name">GWW-DEMO-V6.0</string>-->
    <string name="ValidBarCodeMsg">Barcode should be like(XX-1111111)</string>
    <string name="BarCodeLenghtMsg">SBB Label lenght should be 10</string>
    <string name="BarCodeLenghtMsgVessel">SBB Label lenght should be 10 or 12</string>
    <string name="ContainerLenghtMsg">Container Seal No lenght should be 13</string>
    <string name="containerNOFormatMsg">Container Serial Nr should be (XXXX 111111-1) First 4 digits are characters, Others 7 digits are numbers</string>
    <string name="OldTransferHead">Old TransferID</string>
    <string name="OldTransferMsg">please enter Transfer ID</string>
    <string name="OldTransferIDLenghtMsg">Transfer ID lenght should be more then 9</string>
    <string name="NoValueFound">Please Contact Adminstrator</string>
    <string name="Remove_Message">Are you sure want to remove?</string>
    <string name="action_Remove">Remove</string>
    <string name="action_Sync">Sync</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_delete">Delete</string>
    <string name="Internet_Conn">Internet connection</string>
    <string name="Internet_ConnMsg">Please check your internet connection or try again later</string>
    <string name="AppUpdateTitle">Update Available</string>

    <string name="none_paired">None paired Devices</string>

    <string name="TSC_Conn">Printer Connection...</string>
    <string name="Printing">Printing...</string>
    <string name="PrinterHead">Printer Status</string>

    <string name="PrinterHDmsg">please check the printer either connected or not</string>

    <string name="CountHead">Inventory Count</string>
    <string name="TransferHead">Inventory Transer</string>
    <string name="TransferMessage">Please add atleast one item </string>
    <string name="ReceivedHead">Inventory Received</string>
    <string name="FellingRegisterHead">Felling Registration</string>
    <string name="ExportHead">Export</string>
    <string name="ContainerDetailsHead">Container Details</string>
    <string name="ExtenalDBHead">External DataBase Sync</string>
    <string name="SBBValidationHead">SbbLabel Validation</string>

    <string name="LoginHD">Login</string>
    <string name="UserNameMsg">Please enter the UserName</string>
    <string name="PassMsg">Please enter the Password</string>
    <string name="oldloginMsg">Old User!!Login Successful!</string>
    <string name="action_signout">SignOut</string>
    <string name="action_export_db">DB-Export</string>
    <string name="action_export_Xecel">Xecel-Export</string>
    <string name="SignoutMsg">Are you sure you want to sign out?</string>
    <string name="scan_init_failure_info">Scanner init failured , Please Retry!</string>
    <!-- Toast messages -->
    <string name="info_new_tag_found">New tag found</string>
    <string name="info_no_external_storage">Error: External storage is not
        readable/writable</string>
    <string name="info_valid_dump_not_hex">Error: Some block(s) contain
        invalid data (not hex)</string>
    <string name="info_valid_dump_not_4_or_16_lines">Error: Some
        sectors don\'thave 4 or 16 blocks (lines)</string>
    <string name="info_valid_dump_not_16_bytes">Error: Some blocks
        don\'t have 16 bytes (32 characters)</string>
    <string name="info_valid_dump_sector_range">Error: Sector out of range
        (&#60; 0 or &#62; 39)</string>
    <string name="info_valid_dump_double_sector">Error: Multiple times the
        same sector number</string>
    <string name="info_valid_dump_empty_dump">Error: Empty dump</string>
    <string name="info_not_hex_data">Error: Data must be in hexadecimal
        (0-9 and A-F)</string>
    <string name="info_not_16_byte">Error: Data must be 16 bytes
        (32 characters) long</string>
    <string name="info_copied_to_clipboard">Copied to clipboard</string>
    <string name="info_file_to_big">Error: File is too big (out of memory)</string>
    <string name="title_dynamicfeature">Module Title</string>
    <string name="QuotationHead">Quotation List Delete</string>
    <string name="QuotationPermission">we don\'t have permission to delete this quotation, Because it was came from backend</string>

    <string name="Vesselhead">Vessel Transportation</string>
    <string name="title_activity_external_puchase">ExternalPuchaseActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_external_purchase">MainActivity</string>
    <string name="title_agreement">Agreement</string>
    <string name="title_home">Scanned Logs</string>
    <string name="title_dashboard">Transfer</string>
    <string name="title_notifications">Received</string>
    <string name="title_activity_external_purchase_agreement">ExternalPurchaseAgreementActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <string name="purchaseLogsHead">Purchase Logs</string>
    <string name="pleaseselectoneitem">please select one item from List</string>
    <string name="tolocation">To Location</string>

    <string name="PurchaseTransferHead">Purchase Transfer</string>
    <string name="purchaseReceivedHead">Purchase Received</string>


</resources>
