<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_agreement">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.zebra.main.activity.purchase.ui.logs.LogsFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_logs" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.zebra.main.activity.purchase.ui.transfer.TransferFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_transfer" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.zebra.main.activity.purchase.ui.received.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_agreement"
        android:name="com.zebra.main.activity.purchase.ui.agreement.AgreementFragment"
        android:label="@string/title_agreement"
        tools:layout="@layout/fragment_agreement" />

</navigation>